Revision history for {{$dist->name}}

{{$NEXT}}

2.001     2011-01-13 12:45:05 America/New_York
          greatly expanded tests and documentation for L::D::Global

          L::D now has "string_flogger" method to provide an alternate flogger

2.000     2010-11-23 18:48:53 America/New_York

1.102350  2010-08-23 08:55:17 America/New_York
          fix a bug in generating tempdirs for file logging (thanks, Sawyer X)

1.102220  2010-08-10 11:09:30 America/New_York
          added logger muting (mute, unmute, clear_muted, etc.)
          new_tester turns off log_pid by default
          internal simplification of Proxy

1.100712  2010-03-12 21:43:13 America/New_York
          add the quiet_fatal argument to suppress apparent double-logging to
          standard output and error streams

1.100711  2010-03-12 18:11:41 America/New_York

1.100710  2010-03-12 09:51:32 America/New_York
          add the Log::Dispatchouli::Proxy system
          get_prefix now always returns a scalar (undef, not ())

1.100691  2010-03-10 17:10:53 America/New_York
          just like 1.100690, but passes its own tests!

1.100690  2010-03-10 14:24:59 America/New_York
          remove obsolete "list_name" alias to prefix
          object-level prefix no longer automatically ends in ": "

1.100681  2010-03-09 23:02:11 America/New_York
          rerelease with a tarball that isn't totally insane

1.100680  2010-03-09 22:47:23 America/New_York
          rewrite all log_ methods in terms of ->log
          ->log now includes the code formerly in the internal ->_log_at
          add a new per-message prefix system
          old-style prefix (to be removed) now handle multi-line messages

          * new prefix system is not yet documented, pending experimentation

1.100670  2010-03-08 19:15:30 America/New_York
          make env vars in code match env vars in docs

1.100660  2010-03-07 22:00:58 America/New_York
          add clear_events method
          loggers made with new_tester log to_self
