@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          add env_value and env_prefix methods
 
 2.001     2011-01-13 12:45:05 America/New_York
           greatly expanded tests and documentation for L::D::Global
